Fixed align issue

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -109,8 +109,9 @@ body {
   row-gap: 2rem;
   align-items: center;
   justify-content: center;
+  text-align: center;
   width: 100%;
-  padding: 3rem 0;
+  padding: 3rem 16px;
   background-color: royalblue;
   .title {
     font-size: 2rem;
